--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2024"
 [dependencies]
 actix-web = "4"
 env_logger = "0.11.8"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+solana-client = "1.18.11"
+solana-sdk = "1.18.11"
